--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">AtoZ</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_product">Product</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_outlet">Outlet</string>
     <string name="enter_outlet_name">Enter Outlet Name</string>
