--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AtoZ</string>
+    <string name="app_name">Basic Needs</string>
     <string name="title_home">Home</string>
     <string name="title_product">Product</string>
     <string name="title_profile">Profile</string>
